tests/NormalTests/paczka2/big_fuzzy/59167877.err
Error in line 5: HGN A659 8,4
Error in line 16: nlrwbT A659 13,9
Error in line 24: nlrwbT S903 259,08
Error in line 23: nlrwbT S903 565,0
Error in line 18: A608 A608 18,5
Error in line 36: A608 S903 20,8
Error in line 44: fm8 A608 66,0
Error in line 34: IRBVa S158 49,4
Error in line 51: nlrwbT A608 14,7
Error in line 52: IRBVa S903 18,2
Error in line 55: HGN S158 50,0
Error in line 68: nlrwbT A659 15,5
Error in line 92: nlrwbT A659 73,5
Error in line 89: rWPp2NwWE A659 93,2
Error in line 97: fm8 S903 34,3
Error in line 107: rWPp2NwWE S903 96,7
Error in line 108: rWPp2NwWE S158 54,1
Error in line 106: IRBVa S158 90,4
Error in line 121: A608 A608 36,1
Error in line 123: rWPp2NwWE S158 58,2
Error in line 125: rWPp2NwWE A659 92,5
Error in line 129: fm8 A659 93,1
Error in line 143: rWPp2NwWE S903 94,9
Error in line 135: fm8 A608 44,2
Error in line 147: HGN A659 62,9
Error in line 149: HGN A608 73,6
Error in line 144: rWPp2NwWE S158 77,6
Error in line 170: rWPp2NwWE S903 30,5
Error in line 175: rWPp2NwWE A659 22,9
Error in line 205: fm8 A608 75,5
Error in line 204: A608 S903 81,3
Error in line 206: IRBVa A659 29,0
Error in line 185: TlhaXWksAbH A608 52,7
Error in line 209: A608 A608 60,7
Error in line 207: fm8 S158 46,1
Error in line 221: fm8 A659 7,2
Error in line 244: HGN A659 14,5
